-overflow tooltip fix

--- a/frontend/src/main/mainStyles.css
+++ b/frontend/src/main/mainStyles.css
@@ -1,5 +1,7 @@
 html, body{
     margin: 0;
     background: repeating-linear-gradient(-45deg, #e8ebff, #e8ebff 8px, #dfe2f5 8px, #dfe2f5 16px) fixed;
+    overflow: hidden;
 }
+
 
